Project

General

Profile

Actions

Bug #57542

closed

crimson: PGAdvanceMap updates from wrong version

Added by Radoslaw Zarzynski over 1 year ago. Updated 11 months ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

INFO  2022-09-14 11:02:31,317 [shard 0] osd - handle_osd_map osd_map(17..18 src has 1..18) v4
INFO  2022-09-14 11:02:31,317 [shard 0] osd - handle_osd_map epochs [17..18], i have 17, src has [1..18]
...
DEBUG 2022-09-14 11:02:31,380 [shard 0] osd - pg_advance_map(id=1118, detail=PGAdvanceMap(pg=4.1d from=17 to=18)): start
...
DEBUG 2022-09-14 11:02:32,378 [shard 0] osd - pg_advance_map(id=1118, detail=PGAdvanceMap(pg=4.1d from=17 to=18)): advancing map to 0x61a000776a80
DEBUG 2022-09-14 11:02:32,378 [shard 0] osd -  pg_epoch 17 pg[4.1d( empty local-lis/les=16/17 n=0 ec=16/16 lis/c=0/0 les/c/f=0/0/0 sis=16) [0] r=0 lpr=16 crt=0'0 mlcod 0'0 creating+activating handle_advance_map {0}/{0} -- 0/0
DEBUG 2022-09-14 11:02:32,378 [shard 0] osd -  pg_epoch 18 pg[4.1d( empty local-lis/les=16/17 n=0 ec=16/16 lis/c=0/0 les/c/f=0/0/0 sis=16) [0] r=0 lpr=16 crt=0'0 mlcod 0'0 creating+activating state<Started/Primary/Active>: Active advmap
DEBUG 2022-09-14 11:02:32,378 [shard 0] osd -  pg_epoch 18 pg[4.1d( empty local-lis/les=16/17 n=0 ec=16/16 lis/c=0/0 les/c/f=0/0/0 sis=16) [0] r=0 lpr=16 crt=0'0 mlcod 0'0 creating+activating state<Started>: Started advmap
DEBUG 2022-09-14 11:02:32,378 [shard 0] osd -  pg_epoch 18 pg[4.1d( empty local-lis/les=16/17 n=0 ec=16/16 lis/c=0/0 les/c/f=0/0/0 sis=16) [0] r=0 lpr=16 crt=0'0 mlcod 0'0 creating+activating check_recovery_sources no source osds () went down
DEBUG 2022-09-14 11:02:32,378 [shard 0] osd - got_map(18), current(17)
...
INFO  2022-09-14 11:02:32,318 [shard 0] osd - handle_osd_map osd_map(18..19 src has 1..19) v4
INFO  2022-09-14 11:02:32,318 [shard 0] osd - handle_osd_map epochs [18..19], i have 18, src has [1..19]
...
DEBUG 2022-09-14 11:02:32,346 [shard 0] osd - pg_advance_map(id=1246, detail=PGAdvanceMap(pg=4.1d from=17 to=19)): start
...
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd - pg_advance_map(id=1118, detail=PGAdvanceMap(pg=4.1d from=17 to=18)): map activated
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd - ShardServices::dispatch_context_transaction: empty transaction
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd - pg_advance_map(id=1118, detail=PGAdvanceMap(pg=4.1d from=17 to=18)): sending pg temp
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd - pg_advance_map(id=1118, detail=PGAdvanceMap(pg=4.1d from=17 to=18)): complete
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd - pg_advance_map(id=1246, detail=PGAdvanceMap(pg=4.1d from=17 to=19)): advancing map to 0x61a000776a80 
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd -  pg_epoch 18 pg[4.1d( empty local-lis/les=16/17 n=0 ec=16/16 lis/c=0/0 les/c/f=0/0/0 sis=16) [0] r=0 lpr=16 crt=0'0 mlcod 0'0 creating+activating handle_advance_map {0}/{0} -- 0/0
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd -  pg_epoch 18 pg[4.1d( empty local-lis/les=16/17 n=0 ec=16/16 lis/c=0/0 les/c/f=0/0/0 sis=16) [0] r=0 lpr=16 crt=0'0 mlcod 0'0 creating+activating state<Started/Primary/Active>: Active advmap
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd -  pg_epoch 18 pg[4.1d( empty local-lis/les=16/17 n=0 ec=16/16 lis/c=0/0 les/c/f=0/0/0 sis=16) [0] r=0 lpr=16 crt=0'0 mlcod 0'0 creating+activating state<Started>: Started advmap
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd -  pg_epoch 18 pg[4.1d( empty local-lis/les=16/17 n=0 ec=16/16 lis/c=0/0 les/c/f=0/0/0 sis=16) [0] r=0 lpr=16 crt=0'0 mlcod 0'0 creating+activating check_recovery_sources no source osds () went down
DEBUG 2022-09-14 11:02:32,379 [shard 0] osd - got_map(18), current(18)
WARN  2022-09-14 11:02:32,379 [shard 0] osd - got_map(18) <= current(18), ignoring
ERROR 2022-09-14 11:02:32,379 [shard 0] none - ../src/crimson/osd/osdmap_gate.cc:60 : In function 'void crimson::osd::OSDMapGate<OSDMapGateTypeV>::got_map(epoch_t) [with crimson::osd::OSDMapGateType OSDMapGateTypeV = crimson::osd::OSDMapGateType::PG; epoch_t = unsigned int]', abort(%s)

The `got_map()` shouldn't called for the epoch OSDMapGate has already seen.

Actions #1

Updated by Radoslaw Zarzynski over 1 year ago

  • Description updated (diff)
Actions #2

Updated by Radoslaw Zarzynski over 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 48121
Actions #3

Updated by Matan Breizman 11 months ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF