crimson/osd: fix initializing PGAdvanceMap::from

Fixes: https://tracker.ceph.com/issues/57542
Signed-off-by: Radoslaw Zarzynski <rzarzyns@redhat.com>